<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Repo list-->
    <string name="repo_list_empty_text">Empty Repo list</string>
    <string name="repo_list_error_text">Ups… an error occurred on obtain repo list, please swipe down to try again</string>
    <string name="repo_list_add_error_text">Error on fetch more repo</string>
    <string name="repo_list_add_retry_button">Retry</string>
    <string name="lbl_empty_result">It looks quite empty here.Try to search with a new keyword</string>
    <string name="lbl_detail_back">Detail Back Button</string>
    <string name="lbl_repo_detail">Repository Detail</string>
    <string name="title_repo_name">Name:</string>
    <string name="title_repo_desc">Desc:</string>
    <string name="title_owner">Owner:</string>
    <string name="title_language">Language:</string>
    <string name="lbl_show_repo">Show Repo</string>
</resources>